Too narrow edit field for VCS aliases #JPS-3246 Fixed
Former-commit-id: 477f693382515577217bc899e4c7b27146c0636c

--- a/components/form-ng/form-ng.scss
+++ b/components/form-ng/form-ng.scss
@@ -12,6 +12,14 @@
     width: $ring-unit*85 !important;
   }
 
+  .ring-form__update-text-field_middle {
+    width: $ring-unit*50 !important;
+  }
+
+  .ring-form__update-text-field_nowrap {
+    white-space: nowrap;
+  }
+
   .ring-form__update-text-field_high {
     min-height: $ring-unit*6;
     resize: none;
